@@ -1,5 +1,6 @@
 package org.folio.circulation.services.agedtolost;
 
+import static java.util.concurrent.CompletableFuture.completedFuture;
 import static java.util.stream.Collectors.toSet;
 import static org.folio.circulation.domain.FeeFine.LOST_ITEM_FEE_TYPE;
 import static org.folio.circulation.domain.FeeFine.LOST_ITEM_PROCESSING_FEE_TYPE;
@@ -19,7 +20,11 @@ import static org.folio.circulation.support.results.Result.ofAsync;
 import static org.folio.circulation.support.results.Result.succeeded;
 import static org.folio.circulation.support.utils.ClockUtil.getZonedDateTime;
 import static org.folio.circulation.support.utils.CommonUtils.pair;
+import static org.folio.circulation.support.utils.LogUtil.collectionAsString;
+import static org.folio.circulation.support.utils.LogUtil.mapAsString;
+import static org.folio.circulation.support.utils.LogUtil.multipleRecordsAsString;
 
+import java.lang.invoke.MethodHandles;
 import java.time.ZonedDateTime;
 import java.util.Collection;
 import java.util.HashMap;
@@ -28,7 +33,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.lang3.tuple.Pair;
@@ -53,9 +57,9 @@ import org.folio.circulation.infrastructure.storage.loans.LoanRepository;
 import org.folio.circulation.infrastructure.storage.loans.LostItemPolicyRepository;
 import org.folio.circulation.infrastructure.storage.users.PatronGroupRepository;
 import org.folio.circulation.infrastructure.storage.users.UserRepository;
-import org.folio.circulation.services.actualcostrecord.ActualCostRecordService;
 import org.folio.circulation.services.EventPublisher;
 import org.folio.circulation.services.FeeFineFacade;
+import org.folio.circulation.services.actualcostrecord.ActualCostRecordService;
 import org.folio.circulation.services.support.CreateAccountCommand;
 import org.folio.circulation.support.Clients;
 import org.folio.circulation.support.fetching.PageableFetcher;
@@ -65,8 +69,7 @@ import org.folio.circulation.support.results.Result;
 import lombok.val;
 
 public class ChargeLostFeesWhenAgedToLostService {
-  private static final Logger log = LogManager.getLogger(ChargeLostFeesWhenAgedToLostService.class);
-
+  private static final Logger log = LogManager.getLogger(MethodHandles.lookup().lookupClass());
   private final LostItemPolicyRepository lostItemPolicyRepository;
   private final FeeFineOwnerRepository feeFineOwnerRepository;
   private final FeeFineRepository feeFineRepository;
@@ -82,6 +85,7 @@ public class ChargeLostFeesWhenAgedToLostService {
 
   public ChargeLostFeesWhenAgedToLostService(Clients clients,
     ItemRepository itemRepository, UserRepository userRepository) {
+
     this.itemRepository = itemRepository;
     this.userRepository = userRepository;
     this.lostItemPolicyRepository = new LostItemPolicyRepository(clients);
@@ -92,7 +96,7 @@ public class ChargeLostFeesWhenAgedToLostService {
       userRepository);
     this.storeLoanAndItem = new StoreLoanAndItem(loanRepository,
       itemRepository);
-    this.eventPublisher = new EventPublisher(clients.pubSubPublishingService());
+    this.eventPublisher = new EventPublisher(clients);
     this.loanPageableFetcher = new PageableFetcher<>(loanRepository);
     this.feeFineScheduledNoticeService = FeeFineScheduledNoticeService.using(clients);
     this.actualCostRecordService = new ActualCostRecordService(new ActualCostRecordRepository(clients),
@@ -101,21 +105,21 @@ public class ChargeLostFeesWhenAgedToLostService {
   }
 
   public CompletableFuture<Result<Void>> chargeFees() {
-    log.info("Starting aged to lost items charging...");
-
+    log.info("chargeFees:: starting aged to lost items charging process");
     return loanFetchQuery()
       .after(query -> loanPageableFetcher.processPages(query, this::chargeFees));
   }
 
   public CompletableFuture<Result<Void>> chargeFees(MultipleRecords<Loan> loans) {
+    log.info("chargeFees:: parameters loans {}", () -> multipleRecordsAsString(loans));
     if (loans.isEmpty()) {
-      log.info("No aged to lost loans to charge lost fees");
+      log.info("chargeFees:: no aged to lost loans to charge lost fees");
       return ofAsync(() -> null);
     }
 
     return fetchItemsAndRelatedRecords(loans)
       .thenCompose(r -> r.after(allLoans -> {
-        log.info("Loans to charge fees {}", allLoans.size());
+        log.info("chargeFees:: loans to charge fees {}", allLoans.size());
 
         return succeeded(LoanToChargeFees.usingLoans(allLoans))
           .after(this::fetchFeeFineOwners)
@@ -136,7 +140,6 @@ public class ChargeLostFeesWhenAgedToLostService {
     LoanToChargeFees loanToChargeFees) {
 
     return ofAsync(() -> loanToChargeFees)
-      .thenCompose(r -> r.after(actualCostRecordService::createIfNecessaryForAgedToLostItem))
       .thenCompose(r -> r.after(this::chargeLostFeesForLoan))
       .thenCompose(r -> r.after(eventPublisher::publishClosedLoanEvent))
       .thenApply(r -> r.mapFailure(failure -> handleFailure(loanToChargeFees, failure.toString())))
@@ -144,38 +147,55 @@ public class ChargeLostFeesWhenAgedToLostService {
   }
 
   private static Result<Void> handleFailure(LoanToChargeFees loan, String errorMessage) {
-    log.error("Failed to charge lost item fee(s) for loan {}: {}", loan.getLoanId(), errorMessage);
+    log.error("handleFailure:: failed to charge lost item fee(s) for loanId: {}, error: {}",
+      loan.getLoanId(), errorMessage);
     return succeeded(null);
   }
 
   private CompletableFuture<Result<Loan>> chargeLostFeesForLoan(LoanToChargeFees loanToChargeFees) {
+    Loan loan = loanToChargeFees.getLoan();
+
+    log.info("chargeLostFeesForLoan:: parameters loanId: {}", loan::getId);
     // we can close loans that have no fee to charge
     // and billed immediately
     if (loanToChargeFees.shouldCloseLoan()) {
-      log.info("No age to lost fees/fines to charge immediately, closing loan [{}]",
-        loanToChargeFees.getLoan().getId());
-
+      log.info("chargeLostFeesForLoan:: no age to lost fees/fines to charge immediately, closing loanId: {}",
+        loan::getId);
       return closeLoanAsLostAndPaid(loanToChargeFees);
     }
 
-    Loan loan = loanToChargeFees.getLoan();
-    return createAccountsForLoan(loanToChargeFees)
-      .after(feeFineFacade::createAccounts)
+    if (loanToChargeFees.hasNoFeeFineOwner()) {
+      log.warn("No fee/fine owner present for primary service point {}, skipping loan {}",
+        loanToChargeFees::getPrimaryServicePointId, loan::getId);
+
+      return completedFuture(failed(singleValidationError(
+        "No fee/fine owner found for item's permanent location",
+        "servicePointId", loanToChargeFees.getPrimaryServicePointId())));
+    }
+    log.info("chargeLostFeesForLoan:: creating actual cost record if necessary for loanId: {}",
+      loan::getId);
+
+    return actualCostRecordService.createIfNecessaryForAgedToLostItem(loanToChargeFees)
+      .thenApply(r -> r.next(this::createAccountsForLoan))
+      .thenCompose(r -> r.after(feeFineFacade::createAccounts))
       .thenCompose(r -> r.after(actions ->
         feeFineScheduledNoticeService.scheduleNoticesForAgedLostFeeFineCharged(loan, actions)))
       .thenCompose(r -> r.after(notUsed -> updateLoanBillingInfo(loanToChargeFees)));
   }
 
   private Result<List<CreateAccountCommand>> createAccountsForLoan(LoanToChargeFees loanToChargeFees) {
+    log.info("createAccountsForLoan:: parameters loanId: {}", loanToChargeFees::getLoanId);
+
     return validateCanCreateAccountForLoan(loanToChargeFees)
       .map(notUsed -> getChargeableLostFeeToTypePairs(loanToChargeFees)
         .map(pair -> buildCreateAccountCommand(loanToChargeFees, pair))
-        .collect(Collectors.toList()));
+        .toList());
   }
 
   private Stream<Pair<AutomaticallyChargeableFee, FeeFine>> getChargeableLostFeeToTypePairs(
     LoanToChargeFees loanToCharge) {
 
+    log.info("getChargeableLostFeeToTypePairs:: parameters loanId: {}", loanToCharge::getLoanId);
     final LostItemPolicy policy = loanToCharge.getLostItemPolicy();
 
     val setCostPair = pair(policy.getSetCostFee(), loanToCharge.getLostItemFeeType());
@@ -191,7 +211,9 @@ public class ChargeLostFeesWhenAgedToLostService {
 
     final AutomaticallyChargeableFee feeToCharge = pair.getKey();
     final FeeFine feeFineType = pair.getValue();
-
+    String loanId = loanToCharge.getLoanId();
+    log.info("buildCreateAccountCommand:: parameters loanId: {}, fee amount: {}, fee type: {}",
+      loanId, feeToCharge.getAmount(), feeFineType != null ? feeFineType.getFeeFineType() : null);
     return CreateAccountCommand.builder()
       .withAmount(feeToCharge.getAmount())
       .withCreatedByAutomatedProcess(true)
@@ -215,18 +237,24 @@ public class ChargeLostFeesWhenAgedToLostService {
   private List<LoanToChargeFees> mapFeeFineTypesToLoans(Collection<FeeFine> feeTypes,
     List<LoanToChargeFees> allLoansToCharge) {
 
+    log.info("mapFeeFineTypesToLoans:: mapping fee/fine type(s) to {} loans",
+      () -> collectionAsString(allLoansToCharge));
+
     return allLoansToCharge.stream()
       .map(loanToChargeFees -> loanToChargeFees.withFeeFineTypes(feeTypes))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private CompletableFuture<Result<List<LoanToChargeFees>>> fetchFeeFineOwners(
     List<LoanToChargeFees> allLoansToCharge) {
 
+    log.info("fetchFeeFineOwners:: parameters loans: {}", () -> collectionAsString(allLoansToCharge));
     final Set<String> primaryServicePointIds = allLoansToCharge.stream()
       .map(LoanToChargeFees::getPrimaryServicePointId)
       .filter(Objects::nonNull)
       .collect(toSet());
+    log.info("fetchFeeFineOwners:: fetching fee/fine owners for {} service point(s)",
+      () -> collectionAsString(primaryServicePointIds));
 
     return feeFineOwnerRepository.findOwnersForServicePoints(primaryServicePointIds)
       .thenApply(r -> r.map(owners -> mapOwnersToLoans(owners, allLoansToCharge)));
@@ -235,18 +263,24 @@ public class ChargeLostFeesWhenAgedToLostService {
   private List<LoanToChargeFees> mapOwnersToLoans(Collection<FeeFineOwner> owners,
     List<LoanToChargeFees> loansToCharge) {
 
+    log.info("mapOwnersToLoans:: mapping owners to {} loans",
+      () -> collectionAsString(loansToCharge));
     final Map<String, FeeFineOwner> servicePointToOwner = new HashMap<>();
 
     owners.forEach(owner -> owner.getServicePoints()
       .forEach(servicePoint -> servicePointToOwner.put(servicePoint, owner)));
+    log.debug("mapOwnersToLoans:: created service point to owner mapping with {} entries",
+      () -> mapAsString(servicePointToOwner));
 
     return loansToCharge.stream()
       .map(loanToChargeFees -> loanToChargeFees.withOwner(servicePointToOwner))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private CompletableFuture<Result<MultipleRecords<Loan>>> fetchItemsAndRelatedRecords(
     MultipleRecords<Loan> loans) {
+
+    log.info("fetchItemsAndRelatedRecords:: parameters loans: {}", () -> multipleRecordsAsString(loans));
 
     return itemRepository.fetchItemsFor(succeeded(loans), Loan::withItem)
       .thenApply(r -> r.next(this::excludeLoansWithNonexistentItems))
@@ -257,10 +291,13 @@ public class ChargeLostFeesWhenAgedToLostService {
   private Result<MultipleRecords<Loan>> excludeLoansWithNonexistentItems(
     MultipleRecords<Loan> loans) {
 
+    log.info("excludeLoansWithNonexistentItems:: parameters loans: {}", () -> multipleRecordsAsString(loans));
+
     return succeeded(loans.filter(loan -> loan.getItem().isFound()));
   }
 
   private Result<CqlQuery> loanFetchQuery() {
+    log.info("loanFetchQuery:: building CQL query for aged to lost loans to charge");
     final String billingDateProperty = AGED_TO_LOST_DELAYED_BILLING + "."
       + DATE_LOST_ITEM_SHOULD_BE_BILLED;
     final String lostItemHasBeenBilled = AGED_TO_LOST_DELAYED_BILLING + "."
@@ -279,30 +316,17 @@ public class ChargeLostFeesWhenAgedToLostService {
   }
 
   private Result<LoanToChargeFees> validateCanCreateAccountForLoan(LoanToChargeFees loanToChargeFees) {
-    if (loanToChargeFees.hasNoFeeFineOwner()) {
-      log.warn("No fee/fine owner present for service point {}, skipping loan {}",
-        loanToChargeFees.getPrimaryServicePointId(), loanToChargeFees.getLoan().getId());
-
-      return failed(singleValidationError("No fee/fine owner found for item's effective location",
-        "servicePointId", loanToChargeFees.getPrimaryServicePointId()));
-    }
-
     final LostItemPolicy lostItemPolicy = loanToChargeFees.getLoan().getLostItemPolicy();
 
     if (lostItemPolicy.getSetCostFee().isChargeable() && loanToChargeFees.hasNoLostItemFee()) {
-      log.warn("No lost item fee type found, skipping loan {}",
-        loanToChargeFees.getLoan().getId());
-
+      log.warn("validateCanCreateAccountForLoan:: no lost item fee type found");
       return failed(singleValidationError("No automated Lost item fee type found",
         "feeFineType", LOST_ITEM_FEE_TYPE));
     }
 
     if (lostItemPolicy.getAgeToLostProcessingFee().isChargeable()
       && loanToChargeFees.hasNoLostItemProcessingFee()) {
-
-      log.warn("No lost item processing fee type found, skipping loan {}",
-        loanToChargeFees.getLoan().getId());
-
+      log.warn("validateCanCreateAccountForLoan:: no lost item processing fee type found");
       return failed(singleValidationError("No automated Lost item processing fee type found",
         "feeFineType", LOST_ITEM_PROCESSING_FEE_TYPE));
     }
@@ -311,6 +335,7 @@ public class ChargeLostFeesWhenAgedToLostService {
   }
 
   private CompletableFuture<Result<Loan>> updateLoanBillingInfo(LoanToChargeFees loanToChargeFees) {
+    log.info("updateLoanBillingInfo:: parameters loanId: {}", loanToChargeFees::getLoanId);
     final Loan updatedLoan = loanToChargeFees.getLoan()
       .setLostItemHasBeenBilled()
       .removePreviousAction();
@@ -320,7 +345,7 @@ public class ChargeLostFeesWhenAgedToLostService {
 
   private CompletableFuture<Result<Loan>> closeLoanAsLostAndPaid(LoanToChargeFees loanToChargeFees) {
     final Loan loan = loanToChargeFees.getLoan();
-
+    log.info("closeLoanAsLostAndPaid:: parameters loanId: {}", loan::getId);
     loan.setLostItemHasBeenBilled();
     loan.closeLoanAsLostAndPaid();
 
